[tool.poetry]
name = "tasktracker"
version = "0.1.0"
description = "A FastAPI task management application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
psycopg2 = "*"
python-dotenv = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
